--- a/src/main/resources/templates/front-end/cart/cart.html
+++ b/src/main/resources/templates/front-end/cart/cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Cart - Online Courses & Education Bootstrap5 Template</title>
+    <title>Cart</title>
     <meta name="robots" content="noindex, follow"/>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
