--- a/src/main/resources/templates/front-end/order/student_order_history.html
+++ b/src/main/resources/templates/front-end/order/student_order_history.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Student Reviews - Online Courses & Education Bootstrap5
-        Template</title>
+    <title>Order History</title>
     <meta name="robots" content="noindex, follow"/>
     <meta name="description" content="">
     <meta name="viewport"
